# domain-surveyor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
data/input/: sample.lst
domain_surveyor/: __init__.py  main.py
domain_surveyor/core/: input_parser.py
domain_surveyor/services/: __init__.py  public_dns.py
